# Sona-Gemini-live-agents

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  TOOLS_PLAN.md  cloudbuild.yaml  docker-compose.yml
.github/workflows/: deploy.yml
docs/plans/: S1-server-side-dedup.md  S2-system-prompt-constraints.md
frontend/: .env.example  Dockerfile  FRONTEND_SERVICE.md  index.html  nginx.conf  package-lock.json  package.json  simulate_stream.py  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/components/: ChatPanel.tsx  DrawingToolbar.tsx  MessageLog.tsx  Whiteboard.tsx
frontend/src/hooks/: useDrawingTool.ts
frontend/src/services/: audio-player.ts  audio-recorder.ts  drawingService.ts  drawingSocket.ts  firebaseAuth.ts  latexRenderer.ts  orchestratorChat.ts  orchestratorLive.ts  pcm-player-processor.js  pcm-recorder-processor.js  sessionService.ts
infra/: deploy.sh
services/drawing/: Dockerfile  auth.py  config.py  dsl.py  firestore_store.py  gcp_auth.py  main.py  models.py  pyproject.toml  store.py  templates.py
services/drawing/tests/: conftest.py  test_dsl.py  test_main.py  test_right_triangle_labels.py
services/orchestrator/: Dockerfile  auth.py  config.py  drawing_client.py  main.py  math_verify.py  pyproject.toml  session_client.py
services/orchestrator/agent/: __init__.py  agent.py  canvas_context.py
services/orchestrator/agent/tools/: __init__.py  _auth.py  _batch.py  _canonical.py  _cursor.py  _cursor_store.py  _dedup.py  _execution.py  _shared.py  _trace.py  core.py  editing.py  math_helpers.py  models.py  unified.py
services/orchestrator/canvas/: state.py  store.py
services/orchestrator/renderers/: __init__.py  circle.py  graph.py  number_line.py  polygon.py  quadrilateral.py  rectangle.py  triangle.py
services/orchestrator/tests/: test_canvas_context.py  test_chat_api.py  test_dedup.py  test_draw_diagram_parser.py  test_drawing_client.py  test_live_queue_instrumentation.py  test_live_request_queue_patch.py  test_renderers_registry.py  test_session_client.py  test_tool_trace.py  test_tools.py
services/orchestrator/tools/: __init__.py  _logging.py  clear_canvas.py  draw_diagram.py  new_line.py  plot_graph.py  write_math.py
services/session/: .dockerignore  Dockerfile  auth.py  firestore.py  gcp_auth.py  main.py  models.py  pyproject.toml  storage.py
services/session/tests/: test_auth.py  test_firestore_elements.py  test_main.py
